@@ -19,3 +19,4 @@ Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.  */
 
 void bgp_vty_init ();
+char *afi_safi_print (afi_t, safi_t);
